[fix] Home page is too wide and horizontally scrolls

--- a/css/home.less
+++ b/css/home.less
@@ -154,6 +154,7 @@ body {
 }
 
 .home-footer {
+  max-width: none;
   background-color:@main-brown;
   text-align: center;
   //margin-left:-20px;
